# shadow-clone-public

./: .env.sample  .gitignore  Dockerfile  README.md  config-guide.md  config.py  docker-compose.yml  heroku.yml  mypy.ini  pyproject.toml  requirements.txt  wsgi.py
shadow_clone_api/: shadow_clone.py  shadow_clone_api.py  shadow_clone_auth.py  shadow_clone_models.py  shadow_clone_schema.py
shadow_clone_api/modules/: case_extractor.py  clone_detector.py  file_writer.py  repo_scanner.py  report_generator.py  scan_exceptions.py
shadow_clone_api/templates/: receiver.html  websocket.js
